5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1716_2496.log
== TEST (2019-05-14 13:52:30) 
-- CODE:
num = int(input("Digite um numero: "))
acumuladora = 0
while (num != -1):
	acumuladora = acumuladora + num
print(acumuladora)
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:54:08) 
-- CODE:
num = int(input("Digite um numero: "))
acumuladora = 0
numero = 0 
while (num != -1):
	acumuladora = acumuladora + num
print(acumuladora)
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:54:28) 
-- CODE:
acumuladora = 0
numero = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (num != -1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:54:36) 
-- CODE:
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:54:49) 
-- CODE:
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- EXECUTION TIME:
0.14724
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:55:12) 
-- CODE:
num = int(input("Digite um numero: "))
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
print(acumuladora)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:55:39) 
-- CODE:
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:55:47) 
-- CODE:
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- EXECUTION TIME:
0.148399
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:56:52) 
-- CODE:
num = int(input("Digite um numero: "))
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:57:02) 
-- CODE:
num = int(input("Digite um numero: "))
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:57:22) 
-- CODE:
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:57:29) 
-- CODE:
acumuladora = 0
num = 0 
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- EXECUTION TIME:
0.193358
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:59:15) 
-- CODE:
acumuladora = 0
while (num != -1):
	acumuladora = acumuladora + num
	num = int(input("Digite um numero: "))
print(acumuladora)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while (num != -1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
